--- a/index.html
+++ b/index.html
@@ -1,61 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
 </head>
-
 <body>
-    <div class="first-div">
-        <dl>
-            <h1>
-                <dt>Cricket:</dt>
-            </h1>
-            <dd>Cricket is a very famous sport all over the world especially in Pakistan and India.</dd>
-            <h1>
-                <dt>English language:</dt>
-            </h1>
-            <dd>Learning English has become a must for everyone in present time because English has become an
-                international language and is used to communicate all over the world</dd>
-        </dl>
-    </div>
-    <div>
-        <h1>This div is displaying the property of the tag small. the small tag shrinks down the size of the text <mark>
-                <small>written inside it</small></mark></h1>
-    </div>
-    <mark>Highlight</mark>
-    <div>
-        <pre>
-            <h1>THE CODE TAg</h1>
-            <p>The code tag lets you represent the tags that are used to in coding to structure a webpage. 
-                Some tags are <code>span,div,ol,dl,etc </code>
-                
-            </p>
-        </pre>
-    </div>
-    <div>
-        <h1>Golden Words</h1>
-        <blockquote class="blockquote">
-            <p>Face the failure until the failure fails to face you</p>
-            <footer class="blockquote-footer">-MS Dhoni</footer>
-        </blockquote>
-    </div>
-    <div>
-        <p>You can use <kbd>ctrl+c</kbd>and <kbd>ctrl+v</kbd>to copy and then paste stuff</p>
-    </div>
-    <p><abbr title="codingal.com">Codingal</abbr> was founded in 2020.</p>
-    <div class="container pt-4 my-5 bg-success text-white">
-        <h1>Cricket</h1>
-        <p>Shan loves cricket. HE fell in love with game at a very small age. Since then it has become something very
-            dear to him.</p>
+    <div class="wrapper">
+        <div class="container">
+            <h1>CALCULATOR</h1>
+            <div class="row">
+                <input type="text" name="result" class="result" id="result" value="" placeholder="Result" readonly>
+                <input type="button" value="+" onclick="setScreenValue ('+')">
+                <input type="button" value="1" onclick="setScreenValue ('1')">
+                <input type="button" value="2" onclick="setScreenValue ('2')">
+                <input type="button" value="3" onclick="setScreenValue ('3')">
+                <input type="button" value="-" onclick="setScreenValue ('-')">
+            </div>
+            <div class="row">
+                <input type="button" value="4" onclick="setScreenValue ('4')">
+                <input type="button" value="5" onclick="setScreenValue ('5')">
+                <input type="button" value="6" onclick="setScreenValue ('6')">
+                <input type="button" value="x" onclick="setScreenValue ('*')">
+            </div>
+            <div class="row">
+                <input type="button" value="7" onclick="setScreenValue ('7')">
+                <input type="button" value="8" onclick="setScreenValue ('8')">
+                <input type="button" value="9" onclick="setScreenValue ('9')">
+                <input type="button" value="/" onclick="setScreenValue ('/')">
+            </div>
+            <div class="row">
+                <input type="button" value="%" onclick="setScreenValue ('%')">
+                <input type="button" value="0" onclick="setScreenValue ('0')">
+                <input type="button" value="." onclick="setScreenValue ('.')">
+                <input type="button" value="=" onclick="setScreenValue ()">
+            </div>
+            <div class="row">
+                <input type="button" value="CLEAR" onclick="setScreenValue ()" id="clear" class="clear-button">
+            </div>
+            </div>
+        </div>
     </div>
 </body>
-
 </html>
